# t4d

./: .env.example  .gitignore  .mailmap  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  EQUATIONS_MAP.md  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  README.md  SECURITY.md  claude-hooks.json  docker-compose.full.yml  docker-compose.yml  init.sh  mkdocs.yml  pyproject.toml  requirements.txt  verify_docs.sh
.claude/: ralph-analysis-iteration-1.md  ralph-loop.local.md
.claude/agents/: t4dm-algorithm.md  t4dm-compbio.md  t4dm-conductor.md  t4dm-consolidate.md  t4dm-episodic.md  t4dm-init.md  t4dm-knowledge.md  t4dm-neuro.md  t4dm-planner.md  t4dm-procedural.md  t4dm-retriever.md  t4dm-semantic-mem.md  t4dm-session.md  t4dm-synthesizer.md  t4dm-validator.md  ww-algorithm.md  ww-compbio.md  ww-conductor.md  ww-consolidate.md  ww-episodic.md  ww-init.md  ww-knowledge.md  ww-neuro.md  ww-planner.md  ww-procedural.md  ww-retriever.md  ww-semantic-mem.md  ww-session.md  ww-synthesizer.md  ww-validator.md
.github/workflows/: test.yml
agents/: AGENT_REGISTRY.md  CLAUDE.md  bio-memory-auditor.md  cache-coherence-analyzer.md  eligibility-trace-debugger.md  hinton-learning-validator.md  memory-leak-hunter.md  race-condition-hunter.md
benchmarks/: memory_benchmark.py
benchmarks/baselines/: __init__.py  simple_memory.py
benchmarks/bioplausibility/: __init__.py  run.py
benchmarks/dmr/: __init__.py  run.py
benchmarks/longmemeval/: __init__.py  run.py
config/: CLAUDE.md  claude-code-settings.json  ww-features.json  ww-progress.json
config/hooks/: ww-session-end.py  ww-session-start.py
deploy/: CLAUDE.md
deploy/docker/: Dockerfile.worker  docker-compose.prod.yml
deploy/kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secrets.yaml  service.yaml  storage.yaml
docs/: API.md  ARCHITECTURE.md  BENCHMARK_RESULTS.md  BRAIN_REGION_MAPPING.md  CLAUDE.md  COMPARISON.md  COMPETITIVE_ANALYSIS.md  DEPLOYMENT.md  FULL_SETUP_GUIDE.md  FUNCTIONAL_ARCHITECTURE.md  INTEGRATION_PLAN.md  INTEGRATION_POINTS.md  LEARNING_ARCHITECTURE.md  LIMITATIONS.md  MATHEMATICAL_FOUNDATIONS.md  MCP_INTEGRATION.md  MEMORY_ARCHITECTURE.md  NEUROSCIENCE_TAXONOMY.md  NEUROTRANSMITTER_ARCHITECTURE.md  PERSISTENCE_ARCHITECTURE.md  README.md  ROADMAP.md  SDK.md  SELF_HOSTED_GUIDE.md  SYSTEM_ARCHITECTURE_MASTER.md  TUNABLE_PARAMETERS_MASTER.md  VALIDATION_REPORT.md  index.md
docs/archive/: 3d_viz_architecture.md  AGENTS_AND_SKILLS.md  AGENT_SDK_BIOLOGICAL_MAPPING.md  AGENT_SDK_INTEGRATION.md  ALGORITHMIC_COMPLEXITY_ANALYSIS.md  API_WALKTHROUGH.md  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_BIOLOGICAL.md  ARCHITECTURE_EVALUATION_2026-01-07.md  ARCHITECTURE_REFACTORING_PLAN.md  ARCHITECTURE_REVIEW.md  BASELINE_METRICS.json  BATCH_QUERY_OPTIMIZATION.md  BIOINSPIRED_DIAGRAMS.md  BIOINSPIRED_INTEGRATION.md  BIOINSPIRED_MONITORING.md  BIOINSPIRED_TESTING.md  BIOINSPIRED_TOOLS.md  BIOLOGICAL_ACCURACY_EVALUATION_POST_9PHASE.md  BIOLOGICAL_EVALUATION_SUMMARY.txt  BIOLOGICAL_INTEGRATION.md  BIOLOGICAL_MEMORY_RESEARCH_SYNTHESIS.md  BIOLOGICAL_PLAUSIBILITY_ANALYSIS.md  BIOLOGICAL_VALIDATION_REPORT.md  BIOLOGY_AUDIT_COMPBIO_REVIEW.md  BIOLOGY_AUDIT_SUMMARY.md  BIOLOGY_PRODUCTION_READINESS.md  BUGS_AND_FIXES.md  CITATION_CORRECTIONS.md  CITATION_EXECUTIVE_SUMMARY.md  CITATION_QUICK_REFERENCE.md  CITATION_VERIFICATION_MAIN.md  CLAUDE_CODE_INTEGRATION.md  CODE_QUALITY_REVIEW.md  COLD_START_PRIMING.md  COMPREHENSIVE_BIOLOGICAL_ANALYSIS_2026-01-05.md  COMPREHENSIVE_CODEBASE_ANALYSIS.md  COMPUTATIONAL_BIOLOGY_ANALYSIS.md  COMPUTATIONAL_BIOLOGY_AUDIT.md  COMPUTATIONAL_BIOLOGY_VALIDATION_REPORT.md  (+140 more)
docs/concepts/: architecture.md  bioinspired.md  brain-mapping.md  capsules.md  cross-region-integration.md  forward-forward.md  glymphatic.md  index.md  (+4 more)
examples/: CLAUDE.md  hooks_examples.py  interface_demo.py  nca_demo.py  visualization_demo.py
exports/: t4dm_architecture.gexf  t4dm_architecture.graphml  t4dm_unified_graph.json
frontend/: CLAUDE.md  HINTON_UI_PLAN.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
migrations/: CLAUDE.md  README.md
scripts/: CLAUDE.md  README.md  backup.sh  health_check.sh  migrate.sh  restore.sh  setup-env.sh  validate-env.sh
skills/: CLAUDE.md
tests/: CLAUDE.md  README.md  conftest.py  test_hooks.py  test_integration.py  test_memory.py  test_tracing.py
(+1595 files in other folders)
